Bug 504007 - Clicking "Save As" on KColorSchemeEditor does not update the list of available color schemes
Summary: Clicking "Save As" on KColorSchemeEditor does not update the list of availabl...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 6.3.5
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2025-05-10 12:38 UTC by KDE User
Modified: 2025-08-01 16:25 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.4
Sentry Crash Report:


Attachments
Reloading page required to see color scheme created with Save As (1.93 MB, video/mp4)
2025-05-16 05:41 UTC, John Kizer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description KDE User 2025-05-10 12:38:53 UTC
SUMMARY
Clicking "Save As" on KColorSchemeEditor does not update the list of available color schemes, closing and reopening the application updates the list.

STEPS TO REPRODUCE
1. Go to System settings -> Colors & Themes -> Colors -> Edit Color Scheme (edit any desired color scheme)
2. Click "Save As" and give it a name and press "Ok"
3. The list color schemes list won't update

OBSERVED RESULT
The color schemes list didn't update, leading to me believing the feature doesn't work

EXPECTED RESULT
The list immediately gets updated after clicking "Ok"

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora KDE
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-05-13 18:07:05 UTC
Cannot reproduce this on current git master.
Comment 2 John Kizer 2025-05-16 05:41:00 UTC
I can reproduce on my Fedora KDE 42 device and on a Neon VM, with Plasma 6.3.5 and Frameworks 6.14.0. Thanks!
Comment 3 John Kizer 2025-05-16 05:41:47 UTC
Created attachment 181362 [details]
Reloading page required to see color scheme created with Save As
Comment 4 Akseli Lahtinen 2025-07-31 11:34:26 UTC
Can also reproduce this 

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.15.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 5 Bug Janitor Service 2025-08-01 09:58:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5726
Comment 6 Akseli Lahtinen 2025-08-01 11:38:54 UTC
Git commit 6993f8e3b1652ae09ebdfbc51a301cf2f7f07ecb by Akseli Lahtinen.
Committed on 01/08/2025 at 09:58.
Pushed by akselmo into branch 'master'.

KCMColors: Do not forward the output of editDialogProcess

When we are done editing a colorscheme and save it, dialogProcess
outputs in stdout the names of the colorschemes we save.

ForwardedChannels would send those names to the stdout of the
main process (the KCM), so the dialogProcess stdout was always
empty.

Instead, just use defaults: Separate channels (stdout/stderr) and then
just read it as usual.

This then allows the reloading to work.

M  +0    -1    kcms/colors/colors.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6993f8e3b1652ae09ebdfbc51a301cf2f7f07ecb
Comment 7 Akseli Lahtinen 2025-08-01 16:25:11 UTC
Git commit 2978c36904c41fb4a48c3ff693087f230bb27031 by Akseli Lahtinen.
Committed on 01/08/2025 at 11:39.
Pushed by akselmo into branch 'Plasma/6.4'.

KCMColors: Do not forward the output of editDialogProcess

When we are done editing a colorscheme and save it, dialogProcess
outputs in stdout the names of the colorschemes we save.

ForwardedChannels would send those names to the stdout of the
main process (the KCM), so the dialogProcess stdout was always
empty.

Instead, just use defaults: Separate channels (stdout/stderr) and then
just read it as usual.

This then allows the reloading to work.


(cherry picked from commit 6993f8e3b1652ae09ebdfbc51a301cf2f7f07ecb)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +0    -1    kcms/colors/colors.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2978c36904c41fb4a48c3ff693087f230bb27031